# pan-2026-demo

./: .gitignore  README.md  pyproject.toml
.agent/workflows/: experiment.md
docs/: overview.md
my-submission/: Dockerfile  run_submission.py
notebooks/: EDA.ipynb
notebooks/006-lora-baseline/: lora_evaluation.ipynb  lora_training.ipynb
notebooks/007-ensemble-baseline/: ensemble_evaluation.ipynb
notebooks/008-homoglyph/: homoglyph_evaluation.ipynb  homoglyph_training.ipynb
notebooks/009-lora-replication/: evaluation.ipynb  training.ipynb
pan/: README.md
pan/experiments/000-template/: proposal.md  pyproject.toml  results.md
pan/experiments/001-logistic-regression/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/001-logistic-regression/artifacts/: external_metrics.json  model.joblib  val_metrics.json  vectorizer.joblib
pan/experiments/002-lightgbm/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/002-lightgbm/artifacts/: best_params.json  best_val_metrics.json  external_metrics.json  feature_ablation.csv  feature_names.json  hyperparameter_search.csv  model.joblib  top_features.csv  val_metrics.json  vectorizer.joblib
pan/experiments/003-deberta/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/003-deberta/artifacts/: external_metrics.json  val_metrics.json
pan/experiments/004-external_evaluation/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/004-external_evaluation/artifacts/: all_metrics.json  comparison_table.md
pan/experiments/005-ollama-baseline/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/005-ollama-baseline/artifacts/: all_results.json  hc3_predictions.json  hc3_results.json  pan2025_val_predictions.json  pan2025_val_results.json  test_predictions.json
pan/experiments/006-lora-baseline/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/006-lora-baseline/artifacts/: evaluation_results.json
pan/experiments/007-ensemble-baseline/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/007-ensemble-baseline/artifacts/: ensemble_results.csv
pan/experiments/008-homoglyph/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/008-homoglyph/artifacts/: homoglyph_comparison.csv
pan/experiments/009-lora-replication/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/009-lora-replication/artifacts/: all_results.json  hc3_predictions.json  hc3_results.json  pan2025_val_predictions.json  pan2025_val_results.json  raid_predictions.json  raid_results.json  training_val_metrics.json
pan/experiments/010-obfuscation/: proposal.md  pyproject.toml  results.md  tasks.md
pan/experiments/010-obfuscation/artifacts/: all_results.json  augmentation_config.json  hc3_predictions.json  hc3_results.json  pan2025_val_predictions.json  pan2025_val_results.json  raid_predictions.json  raid_results.json  training_val_metrics.json
pan/src/001-logistic_regression/: evaluate.py  evaluate_external.py  features.py  fetch_hc3.py  metrics.py  preprocessing.py  train.py
pan/src/002-lightgbm/: evaluate_external.py  features.py  importance_analysis.py  stylometric_features.py  train.py  tune_features.py  tune_hyperparams.py
pan/src/003-deberta/: chunking.py  data_loader.py  dataset.py  evaluate.py  evaluate_external.py  generate_plots.py  load_model.py  metrics.py  train.py
pan/src/004-external_evaluation/: __init__.py  debug_deberta.py  download_datasets.py  evaluate_all.py  generate_visualizations.py  model_loaders.py  test_all_models.py  test_deberta.py  test_minimal.py
pan/src/005-ollama-baseline/: __init__.py  evaluate.py  infer.py  prompts.py  run_experiment.py
pan/src/006-lora-baseline/: config.py  dataset.py  evaluate.py  evaluate_full.py  model.py  run_experiment.py  train.py
pan/src/009-lora-replication/: config.py  data.py  evaluate.py  model.py  run_evaluation.py  run_training.py  train.py
pan/src/010-obfuscation/: augment.py  config.py  evaluate.py  pull_ood_data.py  run_evaluation.py  run_training.py
