[project]
name = "pan"
version = "0.1.1"
authors = [{ name = "Harshul Basava", email = "harshul@gatech.edu" }]
description = "DS@GT CLEF pan repository"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core data science
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "joblib",
    "ipykernel",
    
    # Data processing
    "pyspark>=3.4.0",
    "pyarrow",
    "luigi",
    "gdown",
    "dotenv",
    
    # ML / Deep Learning
    "torch",
    "transformers",
    "accelerate",
    "datasets",
    "sentencepiece",
    "lightgbm",
    
    # NLP
    "nltk",
    "textstat",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ruff",
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/dsgt-arc/pan-2026"
Issues = "https://github.com/dsgt-arc/pan-2026/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab",
    "ruff",
    "pre-commit",
    "pytest",
]

[tool.uv.workspace]
members = [
    "pan/experiments/*",
]

[tool.hatch.build.targets.wheel]
packages = ["."]