[project]
name = "experiment-002-lightgbm"
version = "0.1.0"
description = "LightGBM with stylometric features for AI text detection"
requires-python = ">=3.10"

# Experiment-specific dependencies (core deps inherited from root)
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
