[project]
name = "experiment-003-deberta"
version = "0.1.0"
description = "DeBERTa-v3 fine-tuning for AI text detection"
requires-python = ">=3.10"

# Experiment-specific dependencies (core deps inherited from root)
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
