[project]
name = "experiment-005-ollama-baseline"
version = "0.1.0"
description = "Zero-shot LLM detection via Ollama for AI text classification"
requires-python = ">=3.10"

# Experiment-specific dependencies (core deps inherited from root)
dependencies = [
    "ollama",        # Ollama Python client for LLM inference
    "pandas",        # Data loading and manipulation
    "scikit-learn",  # Metrics computation (ROC-AUC, F1, etc.)
    "tqdm",          # Progress bars for inference
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
