[project]
name = "experiment-008-homoglyph"
version = "0.1.0"
description = "Homoglyph data augmentation for robust AI text detection"
requires-python = ">=3.10"

dependencies = [
    "peft",              # LoRA adapters
    "gdown",             # Google Drive downloads
    "bitsandbytes",      # Quantization support
    "confusables",       # Unicode homoglyph character lookup
    "scikit-learn",      # Metrics
    "datasets",          # Dataset loading (HC3, RAID)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
