[project]
name = "experiment-009-lora-replication"
version = "0.1.0"
description = "Clean replication of 006: LoRA fine-tuning of Qwen2.5-1.5B for AI text detection"
requires-python = ">=3.10"

dependencies = [
    "peft>=0.13.0",     # LoRA fine-tuning
    "wandb",            # Experiment tracking & GPU monitoring
    "python-dotenv",    # .env file loading
    "dotenv",           # .env file loading
    "huggingface_hub",  # Model upload
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []