[project]
name = "experiment-010-obfuscation"
version = "0.1.0"
description = "Obfuscation augmentation (homoglyph + synonym) for robust AI text detection"
requires-python = ">=3.10"

dependencies = [
    "peft>=0.13.0",     # LoRA fine-tuning
    "wandb",            # Experiment tracking & GPU monitoring
    "python-dotenv",    # .env file loading
    "huggingface_hub",  # Model upload & dataset download
    "confusable_homoglyphs", # Unicode homoglyph character lookup
    "nltk",             # WordNet synonym lookup
    "datasets",         # HuggingFace datasets for OOD data
    "scikit-learn",     # Metrics
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
